--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "tailwindcss": "^3.4.1"
     },
     "dependencies": {
+        "dotenv": "^16.4.7",
         "postcss": "^8.4.33",
         "postcss-simple-vars": "^7.0.1"
     }
